src/objects/JitterbitSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AcctSyncLastRunDate__c</fullName>
        <label>AcctSyncLastRunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InvoiceBLastRunDate__c</fullName>
        <label>InvoiceBLastRunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QBBalanceLastRunDate__c</fullName>
        <label>QBBalanceLastRunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QBSyncLastRunDate__c</fullName>
        <label>QBSyncLastRunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeSlipALastRunDate__c</fullName>
        <label>TimeSlipALastRunDate</label>
        <type>DateTime</type>
    </fields>
    <label>JitterbitSettings</label>
</CustomObject>